@@ -322,6 +322,11 @@ New Features
 
 * SOLR-2670: Added NIOFSDirectoryFactory (yonik)
 
+* SOLR-2523: Added support in SolrJ to easily interact range with facets.
+  The range facet response can be parsed and is retrievable from the
+  QueryResponse class. The SolrQuery has convenient methods for using
+  range facets. (Martijn van Groningen)
+
 Optimizations
 ----------------------
 
